Next fixing the null value for results

--- a/views/forumPage.ejs
+++ b/views/forumPage.ejs
@@ -1,5 +1,5 @@
 <%- include("components/header") %>
 <%- include("components/navBar") %>
-<%- include("components/forms") %>
-<%- include("components/results") %>
+<%- include("components/forumQuestion") %>
+<%- include("components/forumAnswer") %>
 <%- include("components/footer") %>
