--- a/views/components/forms.ejs
+++ b/views/components/forms.ejs
@@ -17,11 +17,13 @@
                 </div>
                 <!-- Enter text -->
                 <div class="input-group my-3 w-50 mx-auto form-group">
-                    <textarea class="form-control" name="textArea" placeholder="Enter Your Text" id="textArea" rows="3" style="height:100px;"></textarea>
+                    <textarea class="form-control" name="textArea" placeholder="Enter Your Text" id="textArea" rows="3" style="max-height:100px;"></textarea>
                 </div>
                 <!-- Submit Button -->
-                <button type="submit" class="btn btn-dark">Submit</button>
+                <button type="submit" class="btn submit-button btn-dark">Submit</button>
             </form>
         </div>
     </div>
 </section>
+
+<script src="/js/script.js" type="text/javascript"></script>
