fixed errors and add functionality

--- a/views/components/results.ejs
+++ b/views/components/results.ejs
@@ -11,6 +11,7 @@
                 <p class="card-text"><%= results[i].text %></p>
                         <a href="/delete/<%= results[i].id %>" class="card-link">Delete</a>
                         <a href="/forum/<%= results[i].id %>" class="card-link">Answer</a>
+                        <a href="/forum/show/<%= results[i].id %>" class="card-link">Show Answer</a>
                     </div>
                 </div>
             </div>
