--- a/views/components/navBar.ejs
+++ b/views/components/navBar.ejs
@@ -1,7 +1,7 @@
 <!-- Image and text -->
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <i class="fab fa-wpforms"></i>
             Welcome To Forums
         </a>
